added script for checking os

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -42,6 +42,7 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 # shell
 bind f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
-bind . run-shell "~/.local/bin/tmux-sessionizer ~/.dotfiles"
+bind U run-shell "~/.local/bin/tmux-sessionizer ~/.unix_dotfiles"
+bind . run-shell "~/.local/bin/tmux-sessionizer ~/.local/bin/check-os"
 bind S run-shell "~/.local/bin/tmux-sessionizer ~/.dotfiles/scripts/.local/bin"
 bind W run-shell "~/.local/bin/tmux-sessionizer ~/wiki"
