--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -44,5 +44,5 @@ bind f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
 bind U run-shell "~/.local/bin/tmux-sessionizer ~/.unix_dotfiles"
 bind . run-shell "~/.local/bin/which-dot"
-bind S run-shell "~/.local/bin/tmux-sessionizer ~/.dotfiles/scripts/.local/bin"
+bind S run-shell "~/.local/bin/tmux-sessionizer ~/.unix_dotfiles/scripts/.local/bin"
 bind W run-shell "~/.local/bin/tmux-sessionizer ~/wiki"
