--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -43,6 +43,6 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 bind f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
 bind U run-shell "~/.local/bin/tmux-sessionizer ~/.unix_dotfiles"
-bind . run-shell "~/.local/bin/which-dot"
+bind D run-shell "~/.local/bin/which-dot"
 bind S run-shell "~/.local/bin/tmux-sessionizer ~/.unix_dotfiles/scripts/.local/bin"
 bind W run-shell "~/.local/bin/tmux-sessionizer ~/wiki"
