--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -46,3 +46,6 @@ bind U run-shell "~/.local/bin/tmux-sessionizer ~/.unix_dotfiles"
 bind D run-shell "~/.local/bin/which-dot"
 bind S run-shell "~/.local/bin/tmux-sessionizer ~/.unix_dotfiles/scripts/.local/bin"
 bind W run-shell "~/.local/bin/tmux-sessionizer ~/wiki"
+
+set -g @plugin 'christoomey/vim-tmux-navigator'
+run '~/.tmux/plugins/tpm/tpm'
