cleaned up tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,11 +25,6 @@ bind -r - split-window -v -c "#{pane_current_path}"
 bind -r b last-window
 
 # panes
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
-
 bind -n M-k resize-pane -U 5
 bind -n M-j resize-pane -D 5
 bind -n M-h resize-pane -L 5
@@ -42,7 +37,7 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 # shell
 bind f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
-bind U run-shell "~/.local/bin/tmux-sessionizer ~/.unix_dotfiles"
+bind O run-shell "~/.local/bin/tmux-sessionizer ~/.unix_dotfiles"
 bind D run-shell "~/.local/bin/which-dot"
 bind S run-shell "~/.local/bin/tmux-sessionizer ~/.unix_dotfiles/scripts/.local/bin"
 bind W run-shell "~/.local/bin/tmux-sessionizer ~/wiki"
