fixed panes resize

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,10 +25,10 @@ bind -r - split-window -v -c "#{pane_current_path}"
 bind -r b last-window
 
 # panes
-bind -n M-k resize-pane -U 5
-bind -n M-j resize-pane -D 5
-bind -n M-h resize-pane -L 5
-bind -n M-l resize-pane -R 5
+bind -r k resize-pane -U 5
+bind -r j resize-pane -D 5
+bind -r h resize-pane -L 5
+bind -r l resize-pane -R 5
 
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
@@ -41,6 +41,7 @@ bind O run-shell "~/.local/bin/tmux-sessionizer ~/.unix_dotfiles"
 bind D run-shell "~/.local/bin/which-dot"
 bind S run-shell "~/.local/bin/tmux-sessionizer ~/.unix_dotfiles/scripts/.local/bin"
 bind W run-shell "~/.local/bin/tmux-sessionizer ~/wiki"
+bind H run-shell "~/.local/bin/tmux-sessionizer $HOME"
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
 run '~/.tmux/plugins/tpm/tpm'
