--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -37,11 +37,15 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 # shell
 bind f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
-bind O run-shell "~/.local/bin/tmux-sessionizer ~/.unix_dotfiles"
+bind u run-shell "~/.local/bin/tmux-sessionizer ~/.unix_dotfiles"
 bind D run-shell "~/.local/bin/which-dot"
 bind S run-shell "~/.local/bin/tmux-sessionizer ~/.unix_dotfiles/scripts/.local/bin"
 bind W run-shell "~/.local/bin/tmux-sessionizer ~/wiki"
 bind H run-shell "~/.local/bin/tmux-sessionizer $HOME"
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
