--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,6 +4,8 @@ set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 set -s escape-time 0
 set -g history-limit 10000
+set -g xterm-keys on
+
 
 # style
 set -g status-style 'bg=#333333 fg=#5eacd3'
