--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,7 +6,6 @@ set -s escape-time 0
 set -g history-limit 10000
 set -g xterm-keys on
 
-
 # style
 set -g status-style 'bg=#333333 fg=#5eacd3'
 set -gq allow-passthrough on #images
@@ -21,16 +20,7 @@ unbind C-b
 set -g prefix C-s
 bind C-s send-prefix
 
-# window
-bind -r '|' split-window -h -c "#{pane_current_path}"
-bind -r - split-window -v -c "#{pane_current_path}"
 bind -r b last-window
-
-# panes
-bind -r k resize-pane -U 5
-bind -r j resize-pane -D 5
-bind -r h resize-pane -L 5
-bind -r l resize-pane -R 5
 
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
@@ -39,15 +29,8 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 # shell
 bind f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
-bind u run-shell "~/.local/bin/tmux-sessionizer ~/.unix_dotfiles"
+bind U run-shell "~/.local/bin/tmux-sessionizer ~/.unix_dotfiles"
 bind D run-shell "~/.local/bin/which-dot"
 bind S run-shell "~/.local/bin/tmux-sessionizer ~/.unix_dotfiles/scripts/.local/bin"
 bind W run-shell "~/.local/bin/tmux-sessionizer ~/wiki"
 bind H run-shell "~/.local/bin/tmux-sessionizer $HOME"
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
